<resources>
    <string name="app_name">Source Server Manager</string>

    <!-- Activity Titles -->
    <string name="title_server_activity">Server List</string>
    <string name="title_rcon_activity">RCON: %s</string>
    <string name="title_add_activity">Add Server</string>
    <string name="title_edit_activity">Edit: %s</string>
    <string name="title_chat_activity">Chat: %s</string>
    <string name="title_settings_activity">Settings</string>

    <!-- Action Menus -->
    <string name="action_help">Help</string>
    <string name="action_users">Users</string>
    <string name="action_status">Status</string>
    <string name="action_chat">CheckValve Chat</string>
    <string name="action_delete_chat">Delete Chat</string>
    <string name="action_delete_servers">Delete all Server data</string>
    <string name="action_delete_chats">Delete all Chat data</string>
    <string name="action_delete_rcons">Delete all Rcon data</string>
    <string name="action_delete_rcon">Clear Rcon History</string>


    <!-- Buttons -->
    <string name="button_update">Update Server</string>
    <string name="button_add">Add Server</string>
    <string name="button_say">Say</string>
    <string name="button_send">Send</string>
    <string name="button_autocomplete">Edit Rcon AutoComplete</string>

    <!-- SnackBar -->
    <string name="snackbar_undo">Undo</string>
    <string name="snackbar_saved">Server Saved!</string>
    <string name="snackbar_update_error">Could not update! Error!</string>
    <string name="snackbar_not_saved">Server not saved!</string>
    <string name="snackbar_server_deleted"> deleted.</string>

    <!-- CheckBox -->
    <string name="checkbox_show_password">Show Password</string>

    <!-- RCON Activity -->
    <string name="activity_rcon_text_hint">Enter a Command or Text</string>

    <!-- Toasts -->
    <string name="toast_message_copied">Message copied to clipboard.</string>

    <!-- Dialogs -->
    <string name="dialog_delete_server_all">Delete Server List</string>
    <string name="dialog_delete_server_all_message">Are you sure you want to delete the server list?</string>

    <string name="dialog_delete_chat">Delete Chat History</string>
    <string name="dialog_delete_chat_message">Are you sure you want to delete chat history?</string>

    <string name="dialog_delete_rcon">Delete Rcon History</string>
    <string name="dialog_delete_rcon_message">Are you sure you want to delete rcon history?</string>

    <string name="dialog_delete_chat_all">Delete All Chat History</string>
    <string name="dialog_delete_chat_all_message">Are you sure you want to delete history for all Chats?</string>

    <string name="dialog_delete_rcon_all">Delete All Rcon History</string>
    <string name="dialog_delete_rcon_all_message">Are you sure you want to delete history for all Rcon data?</string>

    <string name="dialog_rcon_autocomplete">Edit Rcon AutoComplete</string>
    <string name="dialog_rcon_autocomplete_message">Add common Rcon commands.\nSeparated by a comma.</string>

    <string name="dialog_update">Update</string>
    <string name="dialog_delete_delete">Delete</string>
    <string name="dialog_delete_cancel">Cancel</string>

    <!-- Add/Edit Activity -->
    <string name="activity_server_text_hint_nickname">Server Nickname (Optional)</string>
    <string name="activity_server_text_hint_hostname">IP / Hostname</string>
    <string name="activity_server_text_hint_port">Port</string>
    <string name="activity_server_text_hint_password">RCON Password</string>
    <string name="activity_server_text_hint_cv_port">CheckValve Chat Port (Optional)</string>
    <string name="activity_server_text_hint_cv_password">CheckValve Chat Password (Optional)</string>

    <!-- Chat Activity -->
    <string name="activity_chat_system_message">System</string>
    <string name="activity_chat_text_hint">Say something</string>

    <!-- RCON related Messages/Responses/Errors -->
    <string name="error_failed_rcon">Failed to send RCON command.\n</string>
    <string name="error_not_online">Server is not online or responding.\n</string>
    <string name="error_empty_rcon">RCON response empty (sent successfully).\n</string>
    <string name="error_bad_rcon">Incorrect RCON password.\n</string>
    <string name="error_socket_timeout">Connection timed out.\n</string>

    <!-- Other -->
    <string name="clipboard_primary">SSM Chat</string>
    <string name="switch_goldSource">Enable for GoldSource</string>

</resources>
