<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.sourceservermanager.ServerListActivity">

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/title_settings_activity"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_delete_servers"
        android:orderInCategory="100"
        android:title="@string/action_delete_servers"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_delete_chats"
        android:orderInCategory="100"
        android:title="@string/action_delete_chats"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_delete_rcons"
        android:orderInCategory="100"
        android:title="@string/action_delete_rcons"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_help"
        android:orderInCategory="300"
        android:title="@string/action_help"
        android:icon="@drawable/ic_help"
        app:showAsAction="ifRoom" />

</menu>
